[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/LobbyViewer/SingleTeamInLobbyViewer.gd" type="Script" id=1]

[node name="Control" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -824.0
rect_min_size = Vector2( 200, 0 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 200.0
margin_bottom = 14.0

[node name="TeamNameLabel" type="Label" parent="HBoxContainer"]
margin_right = 75.0
margin_bottom = 14.0
text = "Team name"

[node name="MemberCountLabel" type="Label" parent="HBoxContainer"]
margin_left = 79.0
margin_right = 160.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "cur"
align = 2

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 164.0
margin_right = 169.0
margin_bottom = 14.0
text = "/"

[node name="MaxMembersLabel" type="Label" parent="HBoxContainer"]
margin_left = 173.0
margin_right = 200.0
margin_bottom = 14.0
text = "max"

[node name="MemberList" type="ItemList" parent="."]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 600.0
size_flags_vertical = 3

